\name{NEWS}
\title{brms News}
\encoding{UTF-8}

\section{CHANGES IN VERSION 1.5.0++}{
  \subsection{OTHER CHANGES}{
    \itemize{
      \item Avoid indexing of matrices in non-linear
      models to slightly improve sampling speed.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Fix checks of argument \code{group} in
      method \code{pp_check} thanks to Thomas K.
      \item Fix problems when predicting \code{Beta}
      models thanks to Vivian Lam.
      \item Fix problems when summarizing some models
      fitted with older version of \pkg{brms} thanks
      to Vivian Lam.
      \item Get arguments \code{subset} and \code{nsamples}
      working correctly in \code{marginal_smooths}.
    }
  }
}

\section{CHANGES IN VERSION 1.5.0}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Implement the generalized extreme value
      distribution via family \code{gen_extreme_value}.
      \item Improve flexibility of the \code{horseshoe}
      prior thanks to Juho Piironen.
      \item Introduce auxiliary parameter \code{mu}
      as an alternative to specifying effects within
      the \code{formula} argument in function
      \code{brmsformula}.
      \item Return fitted values of auxiliary parameters 
      via argument \code{auxpar} of method \code{fitted}.
      \item Add vignette \code{"brms_multilevel"}, in which
      the advanced formula syntax of \pkg{brms} is explained
      in detail using several examples.
    }
  }
  \subsection{OTHER CHANGES}{
    \itemize{
      \item Refactor various parts of the package
      to ease implementation of mixture and multivariate
      models in future updates. This should not have
      any user visible effects.
      \item Save the version number of \pkg{rstan} in 
      element \code{version} of \code{brmsfit} objects.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Fix a rare error when predicting \code{von_mises}
      models thanks to John Kirwan.
    }
  }
}
