@@ -9,6 +9,9 @@ S3method(as.matrix,brmsfit)
 S3method(as.mcmc,brmsfit)
 S3method(c,brmsprior)
 S3method(change_effects,btl)
+S3method(check_prior_special,brmsterms)
+S3method(check_prior_special,btl)
+S3method(check_prior_special,btnl)
 S3method(coef,brmsfit)
 S3method(data_effects,btl)
 S3method(data_effects,btnl)
